# termal

./: Cargo.toml  README.md  build.rs  build.sh  test.sh  test.txt
src/: main.rs
src/config/: mod.rs
src/escape/: mod.rs  utf8.rs
src/pty/: mod.rs
src/terminal/: mod.rs
src/xlib/: mod.rs
