[package]
name = "termal-term"
version = "0.1.0"
edition = "2021"

description = "Termal is a terminal emulator for x11"
readme = "README.md"
authors = ["Prox"]
repository = "https://github.com/proxin187/termal"
keywords = ["terminal", "emulator", "shell", "command", "x11"]
categories = ["command-line-utilities", "emulators", "gui"]
license = "MIT OR Apache-2.0"

[features]
default = ["debugger"]
debugger = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.25.0"
nix = { version = "0.28.0", features = ["process", "term", "fs", "ioctl"] }
rodio = "0.17.3"
toml = "0.8.12"
utf8parse = "0.2.1"
vte = "0.13.0"
x11 = "2.21.0"
font-kit = "0.11"
raqote = "0.8.3"
vt100 = "0.15.2"
arboard = "3.3.2"
